# Color2Gray

./: README.md  REPORT.md  pyproject.toml
analysis/: d_18_O_carto_full.json  visualiser_les_mesures_comparaison_2.py
color2gray/: __main__.py  tools.py
color2gray/methods/: __init__.py  average.py  average_luminous.py  base_method.py  necg.py  snecg.py
tests/: test_all.py
